--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@
 
  jobs:
    with-dlc:
-      parallelism: 25
+ #     parallelism: 25
       machine:
         image: ubuntu-1604:201903-01
         docker_layer_caching: true
@@ -23,24 +23,11 @@
         - checkout
  #       - setup_remote_docker:
  #           docker_layer_caching: true
- #       - run: docker image ls -a
- #       - run: |
- #           docker build .
- #       - run:
- #           name: build app in a Docker
- #           no_output_timeout: 1h
- #           command: |
- #             export DOCKER_BUILDKIT=1
- #             TAG=${cache-orb:${CIRCLE_BRANCH/\//-}}
- #             echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin
- #             mkdir -p workspace/images
- #             if ! docker image pull brianoh1979/bohruby:$TAG ; then
- #               docker build -t front-fast --build-arg BUILDKIT_INLINE_CACHE=1 .
- #               docker build -t front-fast .
- #               docker image save front-fast > workspace/images/front-fast.gz
- #             fi
+        - run: docker image ls -a
+        - run: |
+            docker build .
         - run:
-            name: Docker compose 
+            name: build app in a Docker
             no_output_timeout: 1h
             command: |
               export DOCKER_BUILDKIT=1
@@ -48,12 +35,25 @@
               echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin
               mkdir -p workspace/images
               if ! docker image pull brianoh1979/bohruby:$TAG ; then
-                docker-compose -f compose-init-data.yml up --quiet-pull --abort-on-container-exit
-              fi      
-        - persist_to_workspace: # persist the saved Docker image in the workspace to share it with next job
-            root: workspace
-            paths:
-              - images
+                docker build -t front-fast --build-arg BUILDKIT_INLINE_CACHE=1 .
+                docker build -t front-fast .
+                docker image save front-fast > workspace/images/front-fast.gz
+              fi
+ #       - run:
+ #           name: Docker compose 
+ #           no_output_timeout: 1h
+ #           command: |
+ #             export DOCKER_BUILDKIT=1
+ #             TAG=${cache-orb:${CIRCLE_BRANCH/\//-}}
+ #             echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin
+ #             mkdir -p workspace/images
+ #             if ! docker image pull brianoh1979/bohruby:$TAG ; then
+ #               docker-compose -f compose-init-data.yml up --quiet-pull --abort-on-container-exit
+ #             fi      
+ #       - persist_to_workspace: # persist the saved Docker image in the workspace to share it with next job
+ #           root: workspace
+ #           paths:
+ #             - images
 #   test-orb-hub:
 #      docker:
 #        - image: circleci/node:stretch
