--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,11 +23,24 @@
         - checkout
  #       - setup_remote_docker:
  #           docker_layer_caching: true
-        - run: docker image ls -a
+#        - run: docker image ls -a
 #        - run: |
 #            docker build .
+#        - run:
+#            name: build app in a Docker
+#            no_output_timeout: 1h
+#            command: |
+#              export DOCKER_BUILDKIT=1
+#              TAG=${cache-orb:${CIRCLE_BRANCH/\//-}}
+#              echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin
+#              mkdir -p workspace/images
+#              if ! docker image pull brianoh1979/bohruby:$TAG ; then
+#                docker build -t front-fast --build-arg BUILDKIT_INLINE_CACHE=1 .
+#                docker build -t front-fast .
+#                docker image save front-fast > workspace/images/front-fast.gz
+#              fi
         - run:
-            name: build app in a Docker
+            name: Docker compose 
             no_output_timeout: 1h
             command: |
               export DOCKER_BUILDKIT=1
@@ -35,25 +48,12 @@
               echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin
               mkdir -p workspace/images
               if ! docker image pull brianoh1979/bohruby:$TAG ; then
-                docker build -t front-fast --build-arg BUILDKIT_INLINE_CACHE=1 .
-                docker build -t front-fast .
-                docker image save front-fast > workspace/images/front-fast.gz
-              fi
- #       - run:
- #           name: Docker compose 
- #           no_output_timeout: 1h
- #           command: |
- #             export DOCKER_BUILDKIT=1
- #             TAG=${cache-orb:${CIRCLE_BRANCH/\//-}}
- #             echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin
- #             mkdir -p workspace/images
- #             if ! docker image pull brianoh1979/bohruby:$TAG ; then
- #               docker-compose -f compose-init-data.yml up --quiet-pull --abort-on-container-exit
- #             fi      
- #       - persist_to_workspace: # persist the saved Docker image in the workspace to share it with next job
- #           root: workspace
- #           paths:
- #             - images
+                docker-compose -f compose-init-data.yml up --quiet-pull --abort-on-container-exit
+              fi      
+        - persist_to_workspace: # persist the saved Docker image in the workspace to share it with next job
+            root: workspace
+            paths:
+              - images
 #   test-orb-hub:
 #      docker:
 #        - image: circleci/node:stretch
