--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,39 @@
  orbs:
    docker-cache: cci-x/docker-registry-image-cache@0.2.12
 
+ commands:
+  build_separated_app:
+    description: "A command to build a specific app in a specific angular config"
+    parameters:
+      app_name:
+        type: string
+        default: null
+      angular_config:
+        type: string
+        default: "production"
+    steps:
+      - run: checkout
+      - run:
+          name: build app in a Docker
+          no_output_timeout: 1h
+          command: |
+  #          TAG=${CIRCLE_SHA1%"${CIRCLE_SHA1#??????????}"}
+            echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin
+  #          docker login ${DOCKER_REGISTRY_HOSTNAME} -u ${DOCKER_REGISTRY_USER} -p ${DOCKER_REGISTRY_PASSWORD}
+            mkdir -p workspace/images
+            DOCKER_IMAGE_NAME="front-dist"
+            if [ "<< parameters.angular_config >>" == "fast" ] ; then
+              DOCKER_IMAGE_NAME="front-fast"
+            fi
+            if ! docker image pull $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG ; then
+              docker build --build-arg ANGULAR_CONFIG=<< parameters.angular_config >> --build-arg APP_NAME=<< parameters.app_name >> --progress plain --target dist-separated-app -t front-<< parameters.app_name >> .
+              docker image save front-<< parameters.app_name >> > workspace/images/front-<< parameters.app_name >>.gz
+            fi
+      - persist_to_workspace: # persist the saved Docker image in the workspace to share it with next job
+          root: workspace
+          paths:
+            - images
+
  workflows:
    test-and-publish:
      jobs:
@@ -11,82 +44,17 @@
 
  jobs:
    with-dlc:
-      parallelism: 25
       machine:
         image: ubuntu-1604:201903-01
         docker_layer_caching: true
       environment:
         DOCKER_BUILDKIT: "1"
- #     docker:
- #       - image: circleci/node:stretch     
       steps:
         - checkout
- #       - setup_remote_docker:
- #           docker_layer_caching: true
-#        - run: docker image ls -a
-#        - run: |
-#            docker build .
-#        - run:
-#            name: build app in a Docker
-#            no_output_timeout: 1h
-#            command: |
-#              export DOCKER_BUILDKIT=1
-#              TAG=${cache-orb:${CIRCLE_BRANCH/\//-}}
-#              echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin
-#              mkdir -p workspace/images
-#              if ! docker image pull brianoh1979/bohruby:$TAG ; then
-#                docker build -t front-fast --build-arg BUILDKIT_INLINE_CACHE=1 .
-#                docker build -t front-fast .
-#                docker image save front-fast > workspace/images/front-fast.gz
-#              fi
-        - run:
-            name: Docker compose 
-            no_output_timeout: 1h
-            command: |
-              export DOCKER_BUILDKIT=1
-              TAG=${cache-orb:${CIRCLE_BRANCH/\//-}}
-              echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin
-              mkdir -p workspace/images
-              if ! docker image pull brianoh1979/bohruby:$TAG ; then
-                docker-compose -f compose-init-data.yml up --quiet-pull --abort-on-container-exit
-              fi      
-        - persist_to_workspace: # persist the saved Docker image in the workspace to share it with next job
-            root: workspace
-            paths:
-              - images
-#   test-orb-hub:
-#      docker:
-#        - image: circleci/node:stretch
-#      steps:
-#        - checkout
-#        - setup_remote_docker:
-#            docker_layer_caching: true
-#        - run: docker --version
-#        - run:
-#            name: docker login
-#            command: |
-#              echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin 
-#        - docker-cache/with-save-restore-images:
-#            repository: brianoh1979
-#            parallelism: 3
-#            images: >-
-#              cache-orb:master cache-orb:base1-master 
-#              cache-orb:${CIRCLE_BRANCH/\//-}
-#              cache-orb:base1-${CIRCLE_BRANCH/\//-}
-#            steps:
-#              - docker-cache/build:
-#                  command: >-
-#                    docker build -t cache-orb:base1-${CIRCLE_BRANCH/\//-} --target
-#                    base1 .
-#              - docker-cache/build:
-#                  command: 'docker build -t cache-orb:${CIRCLE_BRANCH/\//-} .'
- #             - docker-cache/tag:
- #                 tags: |-
- #                   cache-orb:${CIRCLE_BRANCH/\//-} cache-orb:retagged-a
- #                   cache-orb:${CIRCLE_BRANCH/\//-} cache-orb:retagged-b
- #             - run:
- #                 name: 'Check images were tagged'
- #                 command: |
- #                   docker image inspect cache-orb:retagged-a > /dev/null
- #                   docker image inspect cache-orb:retagged-b > /dev/null
+        - build_separated_app:
+            app_name: "adhesion"
+            angular_config: "fast"
+        - build_separated_app:
+            app_name: "health"
+            angular_config: "fast"
 
