--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,14 +14,12 @@
         type: string
         default: "production"
     steps:
-      - run: checkout
+      - checkout
       - run:
           name: build app in a Docker
           no_output_timeout: 1h
           command: |
-  #          TAG=${CIRCLE_SHA1%"${CIRCLE_SHA1#??????????}"}
             echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin
-  #          docker login ${DOCKER_REGISTRY_HOSTNAME} -u ${DOCKER_REGISTRY_USER} -p ${DOCKER_REGISTRY_PASSWORD}
             mkdir -p workspace/images
             DOCKER_IMAGE_NAME="front-dist"
             if [ "<< parameters.angular_config >>" == "fast" ] ; then
